# ESP32S3_Calendar

./: .gitignore  README.md  sdkconfig  sdkconfig.old
components/espressif__esp_lcd_touch/: idf_component.yml
components/espressif__esp_lcd_touch_gt911/: idf_component.yml
main/: CMakeLists.txt  idf_component.yml  keys_template.c  main.c  waveshare_rgb_lcd_port.c  waveshare_rgb_lcd_port.h
